--- a/emit_tutorials.yml
+++ b/emit_tutorials.yml
@@ -1,271 +1,52 @@
 name: emit_tutorials
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - affine=2.3.1=pyhd8ed1ab_0
-  - argon2-cffi=21.3.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py39hb82d6ee_2
-  - asttokens=2.0.8=pyhd8ed1ab_0
-  - attrs=22.1.0=pyh71513ae_1
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - beautifulsoup4=4.11.1=pyha770c72_0
-  - bleach=5.0.1=pyhd8ed1ab_0
-  - blosc=1.21.1=h74325e0_3
-  - bokeh=2.4.3=pyhd8ed1ab_3
-  - boost-cpp=1.78.0=h9f4b32c_1
-  - brotli=1.0.9=h8ffe710_7
-  - brotli-bin=1.0.9=h8ffe710_7
-  - brotlipy=0.7.0=py39hb82d6ee_1004
-  - bzip2=1.0.8=h8ffe710_4
-  - ca-certificates=2022.9.24=h5b45459_0
-  - cairo=1.16.0=hd694305_1013
-  - cartopy=0.20.3=py39hb64e7e3_1
-  - certifi=2022.9.24=pyhd8ed1ab_0
-  - cffi=1.15.1=py39h0878f49_0
-  - cfitsio=4.1.0=h5a969a9_0
-  - cftime=1.6.1=py39h5d4886f_0
-  - charset-normalizer=2.1.1=pyhd8ed1ab_0
-  - click=8.1.3=py39hcbf5309_0
-  - click-plugins=1.1.1=py_0
-  - cligj=0.7.2=pyhd8ed1ab_1
-  - cloudpickle=2.1.0=pyhd8ed1ab_0
-  - colorama=0.4.5=pyhd8ed1ab_0
-  - colorcet=3.0.0=pyhd8ed1ab_0
-  - cryptography=37.0.1=py39h21b164f_0
-  - curl=7.83.1=h789b8ee_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - cytoolz=0.12.0=py39hb82d6ee_0
-  - dask=2022.8.1=pyhd8ed1ab_2
-  - dask-core=2022.8.1=pyhd8ed1ab_0
-  - datashader=0.14.2=pyh6c4a22f_0
-  - datashape=0.5.4=py_1
-  - debugpy=1.6.3=py39h415ef7b_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - distributed=2022.8.1=pyhd8ed1ab_2
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - executing=0.10.0=pyhd8ed1ab_0
-  - expat=2.4.8=h39d44d4_0
-  - flit-core=3.7.1=pyhd8ed1ab_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.0=hce3cb01_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.37.1=py39hb82d6ee_0
-  - freetype=2.12.1=h546665d_0
-  - freexl=1.0.6=ha8e266a_0
-  - fsspec=2022.7.1=pyhd8ed1ab_0
-  - gdal=3.5.2=py39h34c8707_1
-  - geopandas-base=0.11.1=pyha770c72_0
-  - geos=3.11.0=h39d44d4_0
-  - geotiff=1.7.1=h714bc5f_3
-  - geoviews=1.9.5=pyhd8ed1ab_0
-  - geoviews-core=1.9.5=pyha770c72_0
-  - gettext=0.19.8.1=ha2e2712_1008
-  - glib=2.72.1=h7755175_0
-  - glib-tools=2.72.1=h7755175_0
-  - gst-plugins-base=1.20.3=h001b923_2
-  - gstreamer=1.20.3=h6b5321d_2
-  - hdf4=4.2.15=h0e5069d_4
-  - hdf5=1.12.2=nompi_h2a0e4a3_100
-  - heapdict=1.0.1=py_0
-  - holoviews=1.15.0=pyhd8ed1ab_0
-  - hvplot=0.8.0=pyh6c4a22f_0
-  - icu=70.1=h0e60522_0
-  - idna=3.3=pyhd8ed1ab_0
-  - importlib-metadata=4.11.4=py39hcbf5309_0
-  - importlib_resources=5.9.0=pyhd8ed1ab_0
-  - intel-openmp=2022.1.0=h57928b3_3787
-  - ipykernel=6.15.1=pyh025b116_0
-  - ipython=8.4.0=py39hcbf5309_0
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=8.0.2=pyhd8ed1ab_1
-  - jedi=0.18.1=pyhd8ed1ab_2
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - jpeg=9e=h8ffe710_2
-  - jsonschema=4.16.0=pyhd8ed1ab_0
-  - jupyter=1.0.0=py39hcbf5309_7
-  - jupyter_client=7.3.4=pyhd8ed1ab_0
-  - jupyter_console=6.4.4=pyhd8ed1ab_0
-  - jupyter_core=4.11.1=py39hcbf5309_0
-  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
-  - jupyterlab_widgets=3.0.3=pyhd8ed1ab_0
-  - kealib=1.4.15=hdf81f3a_1
-  - kiwisolver=1.4.4=py39h2e07f2f_0
-  - krb5=1.19.3=h1176d77_0
-  - lcms2=2.12=h2a16943_0
-  - lerc=4.0.0=h63175ca_0
-  - libblas=3.9.0=8_mkl
-  - libbrotlicommon=1.0.9=h8ffe710_7
-  - libbrotlidec=1.0.9=h8ffe710_7
-  - libbrotlienc=1.0.9=h8ffe710_7
-  - libcblas=3.9.0=8_mkl
-  - libclang=14.0.6=default_h77d9078_0
-  - libclang13=14.0.6=default_h77d9078_0
-  - libcurl=7.83.1=h789b8ee_0
-  - libdeflate=1.13=h8ffe710_0
-  - libffi=3.4.2=h8ffe710_5
-  - libgdal=3.5.2=hc386656_1
-  - libglib=2.72.1=h3be07f2_0
-  - libiconv=1.16=he774522_0
-  - libkml=1.3.0=hf2ab4e4_1015
-  - liblapack=3.9.0=8_mkl
-  - libnetcdf=4.8.1=nompi_h85765be_104
-  - libogg=1.3.4=h8ffe710_1
-  - libpng=1.6.38=h19919ed_0
-  - libpq=14.5=hfcc5ef8_0
-  - librttopo=1.1.0=h2842628_11
-  - libsodium=1.0.18=h8d14728_1
-  - libspatialite=5.0.1=ha17912d_18
-  - libsqlite=3.39.3=hcfcfb64_0
-  - libssh2=1.10.0=h680486a_3
-  - libtiff=4.4.0=h92677e6_3
-  - libvorbis=1.3.7=h0e60522_0
-  - libwebp-base=1.2.4=h8ffe710_0
-  - libxcb=1.13=hcd874cb_1004
-  - libxml2=2.9.14=hf5bbc77_4
-  - libxslt=1.1.35=h34f844d_0
-  - libzip=1.9.2=hfed4ece_1
-  - libzlib=1.2.12=h8ffe710_2
-  - llvmlite=0.36.0=py39ha0cd8c8_0
-  - locket=1.0.0=pyhd8ed1ab_0
-  - lxml=4.9.1=py39hb82d6ee_0
-  - lz4=4.0.0=py39h0878066_2
-  - lz4-c=1.9.3=h8ffe710_1
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markdown=3.4.1=pyhd8ed1ab_0
-  - markupsafe=2.1.1=py39hb82d6ee_1
-  - matplotlib-base=3.5.3=py39he03a255_2
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mistune=2.0.4=pyhd8ed1ab_0
-  - mkl=2020.4=hb70f87d_311
-  - msgpack-python=1.0.4=py39h2e07f2f_0
-  - msys2-conda-epoch=20160418=1
-  - multipledispatch=0.6.0=py_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - nbclient=0.6.8=pyhd8ed1ab_0
-  - nbconvert=7.0.0=pyhd8ed1ab_0
-  - nbconvert-core=7.0.0=pyhd8ed1ab_0
-  - nbconvert-pandoc=7.0.0=pyhd8ed1ab_0
-  - nbformat=5.5.0=pyhd8ed1ab_0
-  - nest-asyncio=1.5.5=pyhd8ed1ab_0
-  - netcdf4=1.6.0=nompi_py39h33922f9_101
-  - notebook=6.4.12=pyha770c72_0
-  - numba=0.53.1=py39hb8cd55e_1
-  - numpy=1.23.2=py39h1a62c8c_0
-  - openjpeg=2.5.0=hc9384bd_1
-  - openssl=1.1.1q=h8ffe710_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.4.3=py39h2e25243_0
-  - pandoc=2.19.2=h57928b3_0
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - panel=0.13.1=pyhd8ed1ab_0
-  - param=1.12.2=pyh6c4a22f_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - partd=1.3.0=pyhd8ed1ab_0
-  - pcre=8.45=h0e60522_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=9.2.0=py39hcef8f5f_2
-  - pip=22.2.2=pyhd8ed1ab_0
-  - pixman=0.40.0=h8ffe710_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
-  - ply=3.11=py_1
-  - poppler=22.04.0=hb57f792_3
-  - poppler-data=0.4.11=hd8ed1ab_0
-  - postgresql=14.5=h1c22c4f_0
-  - proj=9.0.1=h1cfcee9_1
-  - prometheus_client=0.14.1=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.30=pyha770c72_0
-  - prompt_toolkit=3.0.30=hd8ed1ab_0
-  - psutil=5.9.1=py39hb82d6ee_0
-  - pthread-stubs=0.4=hcd874cb_1001
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pyct=0.4.6=py_0
-  - pyct-core=0.4.6=py_0
-  - pygeos=0.13=py39h3e8a7d5_0
-  - pygments=2.13.0=pyhd8ed1ab_0
-  - pyogrio=0.4.1=py39h4371f3d_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyproj=3.3.1=py39h380ba8d_1
-  - pyqt=5.15.7=py39hb08f45d_0
-  - pyqt5-sip=12.11.0=py39h415ef7b_0
-  - pyrsistent=0.18.1=py39hb82d6ee_1
-  - pyshp=2.3.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=py39hcbf5309_5
-  - python=3.9.13=h9a09f29_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.16.2=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - pytz=2022.2.1=pyhd8ed1ab_0
-  - pyviz_comms=2.2.1=pyhd8ed1ab_1
-  - pywin32=303=py39hb82d6ee_0
-  - pywinpty=2.0.8=py39h99910a6_0
-  - pyyaml=6.0=py39hb82d6ee_4
-  - pyzmq=23.2.1=py39he46f08e_0
-  - qt-main=5.15.6=hf0cf448_0
-  - qtconsole=5.3.2=pyhd8ed1ab_0
-  - qtconsole-base=5.3.2=pyha770c72_0
-  - qtpy=2.2.0=pyhd8ed1ab_0
-  - rasterio=1.3.2=py39h223f425_0
-  - requests=2.28.1=pyhd8ed1ab_0
-  - rioxarray=0.12.1=pyhd8ed1ab_0
-  - scipy=1.9.0=py39h316f440_0
-  - send2trash=1.8.0=pyhd8ed1ab_0
-  - setuptools=65.3.0=py39hcbf5309_0
-  - shapely=1.8.4=py39he0923fe_0
-  - sip=6.6.2=py39h415ef7b_0
-  - six=1.16.0=pyh6c4a22f_0
-  - snappy=1.1.9=h82413e6_1
-  - snuggs=1.4.7=py_0
-  - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
-  - spectral=0.22.4=pyh6c4a22f_0
-  - sqlite=3.39.3=hcfcfb64_0
-  - stack_data=0.4.0=pyhd8ed1ab_0
-  - tblib=1.7.0=pyhd8ed1ab_0
-  - terminado=0.15.0=py39hcbf5309_0
-  - tiledb=2.11.2=h5689973_0
-  - tinycss2=1.1.1=pyhd8ed1ab_0
-  - tk=8.6.12=h8ffe710_0
-  - toml=0.10.2=pyhd8ed1ab_0
-  - toolz=0.12.0=pyhd8ed1ab_0
-  - tornado=6.1=py39hb82d6ee_3
-  - tqdm=4.64.0=pyhd8ed1ab_0
-  - traitlets=5.3.0=pyhd8ed1ab_0
-  - typing_extensions=4.3.0=pyha770c72_0
-  - tzdata=2022c=h191b570_0
-  - ucrt=10.0.20348.0=h57928b3_0
-  - unicodedata2=14.0.0=py39hb82d6ee_1
-  - urllib3=1.26.11=pyhd8ed1ab_0
-  - vc=14.2=hb210afc_6
-  - vs2015_runtime=14.29.30139=h890b9b1_7
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - webencodings=0.5.1=py_1
-  - wheel=0.37.1=pyhd8ed1ab_0
-  - widgetsnbextension=4.0.3=pyhd8ed1ab_0
-  - win_inet_pton=1.1.0=py39hcbf5309_4
-  - winpty=0.4.3=4
-  - xarray=2022.6.0=pyhd8ed1ab_1
-  - xerces-c=3.2.3=h0e60522_5
-  - xorg-libxau=1.0.9=hcd874cb_0
-  - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xz=5.2.6=h8d14728_0
-  - yaml=0.2.5=h8ffe710_2
-  - zeromq=4.3.4=h0e60522_1
-  - zict=2.2.0=pyhd8ed1ab_0
-  - zipp=3.8.1=pyhd8ed1ab_0
-  - zlib=1.2.12=h8ffe710_2
-  - zstd=1.5.2=h7755175_4
-prefix: C:\Users\ebolch\Miniconda3\envs\emit_tutorial
+  - python=3.9
+  - pangeo-notebook
+  - boto3
+  - rioxarray
+  - xarray
+  - xarray-spatial
+  - h5netcdf
+  - netcdf4
+  - h5py~=3.2
+  - gdal~=3.3
+  - libgdal
+  - geoviews
+  - matplotlib-base
+  - seaborn
+  - intake
+  - hvplot~=0.7
+  - pyproj
+  - bqplot
+  - geopandas
+  - zarr
+  - cartopy
+  - pynco
+  - rasterio
+  - shapely
+  - pyresample
+  - icepyx
+  - joblib
+  - pystac-client
+  - pydap
+  - lxml
+  - ipyleaflet
+  - sidecar
+  - jupyterlab-geojson
+  - jupyterlab-git
+  - jupyter-resource-usage
+  - ipympl
+  - conda-lock
+  - pooch
+  - rasterstats
+  - kerchunk
+  - rechunker
+  - pqdm
+  - coiled
+  - s3fs
+  - pip
+platforms:
+  - linux-64
+  - osx-64
